Fix escaliers invisibles (grille mobile dupliquee) + roue repartie en cercle equilibre autour du point

--- a/src/styles.css
+++ b/src/styles.css
@@ -623,7 +623,7 @@ button { touch-action: manipulation; -webkit-tap-highlight-color: transparent; }
 .wheel-close {
   position: absolute;
   left: 0; top: 0;
-  transform: translate(-50%, calc(-50% + 132px));
+  transform: translate(-50%, calc(-50% + 158px));
   width: 40px; height: 40px;
   border-radius: 50%;
   background: #f4efe3;
@@ -868,16 +868,16 @@ button { touch-action: manipulation; -webkit-tap-highlight-color: transparent; }
 
 .board {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: 30px repeat(6, 1fr) 30px;
   grid-template-areas:
-    'lbl2 lbl2 lbl2 lbl2 lbl2 lbl2'
-    'n6 n6 n3 n3 n5 n5'
-    'n7 n7 n7 n7 n7 n7'
-    'lbl1 lbl1 lbl1 lbl1 lbl1 lbl1'
-    'n4 n4 n4 n1 n1 n1'
-    'n2 n2 n2 n1 n1 n1'
-    'lbl0 lbl0 lbl0 lbl0 lbl0 lbl0'
-    'n8 n8 n8 n8 n8 n8';
+    'lbl2 lbl2 lbl2 lbl2 lbl2 lbl2 lbl2 lbl2'
+    'n6 n6 n6 n3 n3 n5 n5 n5'
+    'sL n7 n7 n7 n7 n7 n7 sR'
+    'sL lbl1 lbl1 lbl1 lbl1 lbl1 lbl1 sR'
+    'n4 n4 n4 n4 n1 n1 n1 sR'
+    'n2 n2 n2 n2 n1 n1 n1 sR'
+    'lbl0 lbl0 lbl0 lbl0 lbl0 lbl0 lbl0 lbl0'
+    'n8 n8 n8 n8 n8 n8 n8 n8';
   gap: 5px;
 }
 .floor-label {
